# SPDX-FileCopyrightText: 2025 Madeline Baggins <madeline@baggins.family>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "maddi-recipe"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-only"
keywords = [ "markdown", "md", "cooking", "recipe" ]
categories = [ "data-structures", "text-processing", "web-programming" ]
description = "A library for parsing and scaling markdown recipes"
repository = "https://github.com/MadelineBaggins/maddi-recipe"
readme = "README.md"


[dependencies]
